# rjacraft

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: lints.yaml  test.yaml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/data-generator/: Cargo.toml
crates/data-generator/src/: lib.rs  name.rs
crates/data-generator/src/blocks/: json.rs  mod.rs  model.rs  output.rs
crates/from_never/: Cargo.toml
crates/from_never/src/: lib.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: array.rs  compound.rs  lib.rs  list.rs  size.rs  string.rs  write.rs
crates/nbt/src/de/: adapter.rs  map.rs  mod.rs  payload.rs  seq.rs
crates/nbt/src/ser/: adapter.rs  macros.rs  map.rs  mod.rs  payload.rs  seq.rs  structure.rs
crates/nbt/src/ser/payload/: mod.rs
crates/nbt/tests/ser/: basic.rs  mod.rs  servers.rs
crates/network/: Cargo.toml
crates/network/examples/: basic_server.rs
crates/network/src/: components.rs  decode.rs  encode.rs  events.rs  lib.rs  net_thread.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  frame.rs  io.rs  lib.rs  packets.rs  types.rs  var_int.rs  varint.rs  version.rs
crates/protocol/src/packets/: c2s.rs  cb.rs  client.rs  macros.rs  s2c.rs  sb.rs  server.rs
crates/protocol/src/packets/c2s/: handshake.rs  status.rs
crates/protocol/src/packets/cb/: configuration.rs  login.rs  play.rs  status.rs
crates/protocol/src/packets/client/: configuration.rs  handshake.rs  login.rs  status.rs
crates/protocol/src/packets/s2c/: login.rs  play.rs
crates/protocol/src/packets/sb/: configuration.rs  handshake.rs  login.rs  play.rs
crates/protocol/src/packets/server/: configuration.rs  login.rs  play.rs  status.rs
crates/protocol/src/types/: bool_option.rs  chat.rs  identifier.rs  json_string.rs  len_string.rs  len_vec.rs  length_vec.rs  primitive.rs  remaining_byte_array.rs  remaining_bytes.rs  server_status.rs  status_object.rs  string.rs  uuid.rs  varint.rs  version.rs
crates/types/: Cargo.toml  build.rs
crates/types/src/: lib.rs
examples/: basic_server.rs
mc-data/: blocks.json
src/: lib.rs
