[workspace]

members = [
    "crates/core",
    "crates/types",
    "crates/data-generator"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.72"
license = "MIT OR Apache-2.0"
keywords = ["minecraft", "server", "api", "plugins"]
categories = ["game-development"]
homepage = "https://github.com/rjacraft"
repository = "https://github.com/rjacraft/rjacraft"

[workspace.dependencies]
# Bevy game engine
bevy = { version = "0.11.2", default-features = false }

# Encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
convert_case = "0.6.0"
numerals = "0.1.4"

# AST manupulation
syn = { version = "2.0", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
prettyplease = "0.2.12"

# Documentation
document-features = "0.2.7"

# Own crates
rjacraft_core = { path = "crates/core", version = "0.0.1" }
rjacraft_types = { path = "crates/types", version = "0.0.1" }

# Bevy-specific profile setup aimed at better performace while developing

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package]
name = "rjacraft"
description = "Minecraft server development suite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Rjacraft components
rjacraft_core = { workspace = true, optional = true }
rjacraft_types = { workspace = true, optional = true }

# Documentation
document-features.workspace = true

[features]

#! ## Basic features

## Enables the default features
default = ["core"]

## Enables `core` features
core = ["dep:rjacraft_core"]
### Auto-generated blocks, items, biomes and more
types = ["dep:rjacraft_types"]
