[workspace]

members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.72"
license = "MIT OR Apache-2.0"
keywords = ["minecraft", "server", "api", "plugins"]
categories = ["game-development"]
homepage = "https://github.com/rjacraft"
repository = "https://github.com/rjacraft/rjacraft"
include = ["/src", "/examples"]

[workspace.dependencies]
# Bevy game engine
bevy_ecs = "0.11"
bevy_app = "0.11"

# Async
tokio = { version = "1.32", default-features = false }
flume = "0.11"

# Encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4"
thiserror = "1.0"
uuid = { version = "1.4", features = ["serde"] }

# Documentation
document-features = "0.2"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Macro utils
paste = "1.0"

# Own crates
rjacraft_core = { path = "crates/core" }
rjacraft_network = { path = "crates/network" }
rjacraft_protocol = { path = "crates/protocol" }
from_never = { path = "crates/from_never" }

# Bevy-specific profile setup aimed at better performace while developing

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package]
name = "rjacraft"
description = "Minecraft server development suite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Rjacraft components
rjacraft_core = { workspace = true, optional = true }
rjacraft_network = { workspace = true, optional = true }
rjacraft_protocol = { workspace = true, optional = true }

# Documentation
document-features.workspace = true

[features]
default = ["core"]

## Core functionality
core = ["dep:rjacraft_core"]
## Networking systems and events
network = ["dep:rjacraft_network"]
## The Minecraft protocol
protocol = ["dep:rjacraft_protocol"]
