[package]
name = "rjacraft_core"
description = "Core components of rjacraft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bevy.workspace = true
