[package]
name = "rjacraft_data_generator"
description = "A tool for translating Minecraft data reports into Rust constructs"
categories = ["development-tools::build-utils", "encoding"]
keywords = ["rjacraft", "codegen", "minecraft"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
convert_case.workspace = true
numerals.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
syn = { workspace = true, features = ["parsing"] }
proc-macro2.workspace = true
quote.workspace = true
prettyplease.workspace = true
indexmap.workspace = true
