[package]
name = "rjacraft_nbt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
cesu8.workspace = true
tokio = { workspace = true, default-features = false, features = ["io-util"], optional = true }
subenum.workspace = true

# Documentation
document-features.workspace = true

[features]
## Enables support for async APIs and traits where possible.
async = ["dep:tokio"]
