[package]
name = "rjacraft_network"
description = "Network components of rjacraft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
] }
rjacraft_protocol.workspace = true
bevy_ecs.workspace = true
bevy_app.workspace = true
bytes.workspace = true
thiserror.workspace = true
flume.workspace = true
tracing.workspace = true
anyhow = "1"

[dev-dependencies]
serde_json.workspace = true
tracing-subscriber.workspace = true
