[package]
name = "rjacraft_protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
byteorder.workspace = true
thiserror.workspace = true
bytes.workspace = true
uuid.workspace = true
anyhow = "1"
