[package]
name = "rjacraft_protocol"
description = "The crucial parts of Minecraft's protocol."
categories = ["network-programming", "asynchronous", "encoding"]
keywords = ["rjacraft", "tokio", "minecraft"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["io-util"] }
thiserror.workspace = true
bytes.workspace = true
uuid.workspace = true
from_never.workspace = true
paste.workspace = true
serde.workspace = true
serde_json.workspace = true
