[package]
name = "rjacraft_types"
description = "Rjacraft's collection of Minecraft protocol constructs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
rjacraft_data_generator.workspace = true
